cchulo.App.PortfolioBlog/ClientApp/src/app/pages/components/home/home.component.scss
.home-container {

    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: auto;
    height: 60%;
    width: 100%;
    
}

.home-container-mobile {
    display: flex;
    flex-direction: column-reverse;
    justify-content: space-around;
    align-items: center;
    padding-top: 50px;
    margin: auto;
    height: 60%;
    width: 100%;
}

.blog-update-container {
    .blog-entry {
        padding: 10px;
    }
}

.logo-icon {
    height: 200px;
    width: 200px;
    text-align: center;
}

.logo-icon-mobile {
    height: 100px;
    width: 100px;
    text-align: center;
}

